@@ -9,14 +9,14 @@ import java.util.ArrayList;
  * holds the current angle the entity is traveling in.
  */
 public class Path {
-    private ArrayList<Box3D> nodes;
+    private ArrayDeque<Box3D> nodes;
     private float angle;
 
     /**
      * Creates a new path, with no nodes.
      */
     public Path() {
-        this.nodes = new ArrayList<Box3D>();
+        this.nodes = new ArrayDeque<>();
         this.angle = 0;
     }
 
@@ -24,7 +24,7 @@ public class Path {
      * Creates a new path, with given nodes.
      * @param nodes - List of calculatePositions in path to target.
      */
-    public Path(ArrayList<Box3D> nodes) {
+    public Path(ArrayDeque<Box3D> nodes) {
         this.nodes = nodes;
         this.angle = 0;
     }
@@ -33,7 +33,7 @@ public class Path {
      * Get the deque of nodes.
      * @return nodes as ArrayList of Box3d elements
      */
-    public ArrayList<Box3D> getNodes() {
+    public ArrayDeque<Box3D> getNodes() {
         return nodes;
     }
 
@@ -41,7 +41,7 @@ public class Path {
      * Set a new deque of nodes
      * @param nodes list of calculatePositions in path
      */
-    public void setNodes(ArrayList<Box3D> nodes) {
+    public void setNodes(ArrayDeque<Box3D> nodes) {
         this.nodes = nodes;
     }
 
@@ -74,11 +74,11 @@ public class Path {
         // Construct new Box3D from _currentPosition_
         Box3D newPos = new Box3D(currentPosition);
         // Check if the current position overlaps the first node in list
-        if (currentPosition.overlaps(nodes.get(0))) {
+        if (currentPosition.overlaps(nodes.getFirst())) {
             // Remove first node from list as it's been reached
             nodes.remove(0);
             // Set angle to angle between _currentPosition_ and next node
-            setAngle(currentPosition.angle(nodes.get(0)));
+            setAngle(currentPosition.angle(nodes.getFirst()));
             // Calculate new x and y calculatePositions
             float newX = (float) (speed * Math.cos(getAngle()));
             float newY = (float) (speed * Math.sin(getAngle()));
@@ -88,7 +88,7 @@ public class Path {
         }
         // Haven't reached the next node in list
         // Set angle to angle between _currentPosition_ and next node
-        setAngle(currentPosition.angle(nodes.get(0)));
+        setAngle(currentPosition.angle(nodes.getFirst()));
         // Calculate new x and y calculatePositions
         float newX = (float) (speed * Math.cos(getAngle()));
         float newY = (float) (speed * Math.sin(getAngle()));
@@ -103,7 +103,7 @@ public class Path {
      * @return A copied Box3D representation of the point.
      */
     public Box3D nextPoint() {
-        return nodes.get(0);
+        return nodes.getFirst();
     }
 
     /**
@@ -113,7 +113,7 @@ public class Path {
      * @return A copied Box3D representation of the point.
      */
     public Box3D goal() {
-        return new Box3D(nodes.get(nodes.size() - 1));
+        return nodes.getLast();
     }
 
     /**
@@ -137,8 +137,6 @@ public class Path {
      * @return A Box3D representation of the point.
      */
     public Box3D pop() {
-        Box3D box = nodes.get(0);
-        nodes.remove(0);
-        return box;
+        return nodes.pop();
     }
 }
